# cmdia

./: .gitignore  README.md  pyproject.toml
src/cmdia/: cmdia.py  config.py  db.py  files.py  screen.py
